Adding the .deb to linux options